# atlas-bot

./: .env.example  .gitignore  README.md  makefile  pyproject.toml
atlas/: main.py
atlas/commands/: command_manager.py  conversator.py  hash.py  summary.py  summary_old.py  text2img.py
atlas/helpers/: farc_token_maker.py  imgur_bearer.py
